# android_test_application

./: CMakeLists.txt  android_test_application_ln_CD.ts
forms/qml/: Assets.qml  Colors.qml  Typography.qml  main.qml
forms/qml/forms/: CommentsForm.qml  ForgotPasswordForm.qml  Loading.qml  LoginForm.qml  NavBar.qml  NavBarDrawer.qml  NavBarDrawerListDelegate.qml  RegisterForm.qml  StreamingPageDetails.qml  VideoDelegate.qml
forms/qml/mediaplayer/: MainVideoPlayer.qml  qml.qrc
forms/qml/pages/: FavoritePage.qml  HomePage.qml  LandingPage.qml  ProfilePage.qml  StreamingPage.qml
forms/qml/scripts/: constants.js
include/: commentslistmodel.hpp  user.hpp  videodatalist.hpp  videoslistmodel.hpp
src/: commentslistmodel.cpp  main.cpp  user.cpp  videodatalist.cpp  videoslistmodel.cpp
